--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,9 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  provider: any
-  google_maps_flutter: any
-  http: ^0.12.1
+  provider: ^6.0.3
+  google_maps_flutter: ^2.1.5
+  http: ^0.13.4
   latlong: ^0.6.1
   material_design_icons_flutter: any
 
