--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:icon="@mipmap/ic_launcher"
         >
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyCtgnbjQ-22Yn4AylCap7ZYGwn0PCupeIQ"/>
+               android:value="API_KEY"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
